<resources>
    <string name="app_name">NMedia</string>
    <string name="name">NMedia!</string>
    <string name="description_post_author">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_likes">Post author likes</string>
    <string name="countLikes" translatable="false">10000</string>
    <string name="description_post_repost">Repost</string>
    <string name="description_post_views">views</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="add_button" translatable="false">add Button</string>
    <string name="text_post" translatable="false">Text Post</string>
    <string name="error_empty_content">Empty Content</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="edit_image" translatable="false">Edit Image</string>
    <string name="video_content">Video</string>
    <string name="button_play_content">Play</string>
    <string name="text_url" translatable="false">Url</string>
    <string name="msg_token_fmt" translatable="false">token</string>
    <string name="channel_remote_name" translatable="false">Server notifications</string>
    <string name="channel_remote_description" translatable="false">Notifications from remote server</string>
    <string name="notification_user_liked" translatable="false">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_shared">User %1$s shared %2$s\'s post</string>
    <string name="notification_user_added">User %1$s added new post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="network_error">Network error</string>
    <string name="retry">Retry</string>
    <string name="empty">empty</string>
    <string name="unknown_error">Unknown error</string>
    <string name="save">save</string>
    <string name="description_photo">description_photo</string>
    <string name="description_select_photo" />
    <string name="description_take_photo" />
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sidn up</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="user_name">name</string>

</resources>