<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/barrier_bottom_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp"
        tools:listitem="@layout/card_post" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="add_content,add_post" />

    <EditText
        android:id="@+id/add_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:background="@android:color/transparent"
        android:hint="@string/text_post"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:maxLines="4"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_post"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/add_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/add_button"
        android:src="@drawable/baseline_check_circle_outline_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="cancel,edit_image,description_editing,author_name,barrier_bottom_2"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_bottom_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="cancel" />


    <ImageButton
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cancel"
        android:padding="@dimen/padding_size"
        android:src="@drawable/baseline_close_24"
        app:layout_constraintBottom_toTopOf="@id/barrier_bottom"
        app:layout_constraintStart_toStartOf="@id/add_post" />

    <TextView
        android:id="@+id/description_editing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/menu_edit"
        android:textColor="#366238"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/edit_image"
        app:layout_constraintTop_toTopOf="@id/barrier_bottom_2" />

    <TextView
        android:id="@+id/author_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textColor="#3F51B5"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/barrier_bottom"
        app:layout_constraintEnd_toStartOf="@id/cancel"
        app:layout_constraintStart_toEndOf="@id/edit_image"
        app:layout_constraintTop_toBottomOf="@id/description_editing"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/edit_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/edit_image"
        android:padding="@dimen/padding_size"
        android:src="@drawable/baseline_create_24"
        app:layout_constraintBottom_toBottomOf="@id/barrier_bottom"
        app:layout_constraintStart_toStartOf="@id/add_content"
        app:layout_constraintTop_toTopOf="@id/barrier_bottom_2" />


</androidx.constraintlayout.widget.ConstraintLayout>